fix(layout): fix label overflow
修复因为label文字过长导致溢出问题

--- a/clients/portal/modules/work-flow/content/editor/forms/intermidiate/components/field-permission/style.scss
+++ b/clients/portal/modules/work-flow/content/editor/forms/intermidiate/components/field-permission/style.scss
@@ -1,3 +1,3 @@
 .ant-form-item-label {
-  overflow: visible;
+  overflow: hidden;
 }
